change migration function

--- a/.env
+++ b/.env
@@ -8,3 +8,10 @@ FLASK_ENV=development
 # Used for CDN (in production)
 # No Slash at the end
 ASSETS_ROOT=/static/assets
+
+DB_ENGINE=mysql
+DB_NAME=temi_v3
+DB_HOST=35.226.141.122
+DB_PORT=3306
+DB_USERNAME=naya
+DB_PASS=NayaPass1!
