--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,9 @@ flask-restx==0.5.1
 python-dotenv==0.19.2
 Flask-Minify==0.37
 gcsa~=1.3.0
+pandas~=1.4
+pandas~=1.4.3
+pymysql~=1.0.2
+numpy~=1.23.1
+pytz~=2022.2.1
+alembic~=1.8.1
